fixes on mobile view

--- a/style.scss
+++ b/style.scss
@@ -127,29 +127,28 @@ header {
         line-height: 45px;
         margin-top: 65px;
     }
+}
 
-    .button {
-        width: 280px;
-        height: 80px;
-        margin-top: 92px;
-        background: linear-gradient(270deg, #13ADC7 0%, #6978D1 66.67%, #945DD6 100%);
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        border-radius: 83px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-decoration: none;
-        position: relative;
+.button {
+    width: 280px;
+    height: 80px;
+    margin-top: 92px;
+    background: linear-gradient(270deg, #13ADC7 0%, #6978D1 66.67%, #945DD6 100%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 83px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    position: relative;
 
-        h2 {
-            font-family: 'Poppins', sans-serif;
-            font-style: normal;
-            font-weight: 600;
-            font-size: 28px;
-            color: #FFFFFF;
-        }
+    h2 {
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 28px;
+        color: #FFFFFF;
     }
-
 }
 
 .button:hover {
@@ -162,7 +161,7 @@ header {
 .burger-icon {
     color: #FFFFFF;
     display: none;
-    position: absolute ;
+    position: absolute;
     right: 8vw;
     top: 47px;
 }
@@ -171,19 +170,24 @@ header {
 
 @media(max-width:768px) {
     .hero-content {
+        margin-top: 0;
+        margin-left: 30px;
         h1 {
             max-width: 70vw;
-            font-size: 40px;
+            font-size: 30px;
+            letter-spacing: 0px;
+            word-spacing: 0;
+            margin-top: 0;
         }
-    }
+    
 
     p {
         max-width: 70vw;
         display: flex;
         justify-content: center;
-        font-size: 20px;
+        font-size: 15px;
     }
-
+    }
     nav {
         display: none;
     }
@@ -197,11 +201,16 @@ header {
     .social {
         display: none;
     }
-    .burger-icon{
+
+    .burger-icon {
         display: block;
     }
+
     .button {
         width: 200px;
         height: 60px;
+        h2{
+            font-size: medium;
+        }
     }
 }
